--- a/GeekText/src/main/resources/application.properties
+++ b/GeekText/src/main/resources/application.properties
@@ -1,2 +1,7 @@
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=geektext
+spring.data.mongodb.auto-index-creation=true
+
 spring.application.name=GeekText
-spring.data.mongodb.uri=mongodb+srv://qveentoria:bxNetHadimiJnWLY@geektextdb.hwnlk.mongodb.net/GeekText?retryWrites=true&w=majority&appName=GeekTextDB?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://qveentoria:bxNetHadimiJnWLY@geektextdb.hwnlk.mongodb.net/?retryWrites=true&w=majority&appName=GeekTextDB
