--- a/GeekText/src/main/resources/application.properties
+++ b/GeekText/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=GeekText
-spring.data.mongodb.uri=mongodb+srv://qveentoria:bxNetHadimiJnWLY@geektextdb.hwnlk.mongodb.net/?retryWrites=true&w=majority&appName=GeekTextDB
+spring.data.mongodb.uri=mongodb+srv://qveentoria:bxNetHadimiJnWLY@geektextdb.hwnlk.mongodb.net/GeekTextDB?retryWrites=true&w=majority
 
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.data.mongodb=DEBUG
