--- a/GeekText/src/main/resources/application.properties
+++ b/GeekText/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=GeekText
-spring.data.mongodb.uri=mongodb+srv://qveentoria:bxNetHadimiJnWLY@geektextdb.hwnlk.mongodb.net/?retryWrites=true&w=majority&appName=GeekTextDB
+
+server.port:8080
+spring.data.mongodb.uri=mongodb://localhost:27017/mongoexample
