--- a/GeekText/src/main/resources/application.properties
+++ b/GeekText/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=GeekText
 
 server.port:8080
-spring.data.mongodb.uri=mongodb://localhost:27017/mongoexample
+spring.data.mongodb.uri=mongodb://localhost:27017/BookReview
