--- a/GeekText/src/main/resources/application.properties
+++ b/GeekText/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 spring.application.name=GeekText
-spring.data.mongodb.uri=mongodb+srv://qveentoria:bxNetHadimiJnWLY@geektextdb.hwnlk.mongodb.net/GeekTextDB?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://localhost:27017/GeekText
 
 
-
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.data.mongodb=DEBUG
