--- a/GeekText/src/main/resources/application.properties
+++ b/GeekText/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=GeekText
-server.port:8081
+server.port=8081
 //spring.data.mongodb.uri=mongodb://localhost:27017/mongospring
 spring.data.mongodb.uri=mongodb://localhost:27017/bookstore_db
+
